# chilloutvr_rs

./: .clippy.toml  .drone.yml  .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.config/: extra.dic  spellcheck.toml
.github/workflows/: ci.yml
src/: assets.rs  id.rs  instances.rs  lib.rs  requests.rs  users.rs  worlds.rs
src/api_client/: mod.rs  ws.rs
src/model/: assets.rs  authentication.rs  categories.rs  featureds.rs  id.rs  instances.rs  invites.rs  mod.rs  searches.rs  users.rs  worlds.rs
src/models/: assets.rs  friends.rs  instances.rs  invites.rs  mod.rs  searches.rs  users.rs  worlds.rs
src/query/: categories.rs  friends.rs  instances.rs  invites.rs  mod.rs  searches.rs  users.rs  worlds.rs
src/ws/: invites.rs  mod.rs  types.rs  users.rs  worlds.rs
tests/: categories.rs  friends.rs  login.rs  search.rs  users.rs  worlds.rs  ws.rs
tests/common/: mod.rs
