[package]
name = "chilloutvr"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "Unofficial rust types of ChilloutVR's API"
repository = "https://github.com/onlivfe/chilloutvr_rs"
documentation = "https://docs.rs/chilloutvr"
keywords = ["cvr", "chilloutvr", "api", "socialvr", "websocket"]
categories = ["api-bindings", "games"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "chilloutvr"
path = "src/lib.rs"
crate-type = ["lib", "dylib"]

[features]

default = ["http", "ws"]

# Enable models that relate are used in HTTP requests
http = ["racal"]
http_client = ["http", "dep:http", "reqwest", "racal/reqwest", "governor", "async-trait"]

# Enable models that are used in WS requests
ws = []
ws_client = ["ws", "tokio", "ezsockets", "tokio-stream", "dep:http", "tokio-tungstenite", "async-trait"]

# By default we allows deserializing some things partially even with errors.
# Like skipping array entries with errors, which is not wanted for tests though.
debug = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["time_0_3"] }
time = { version = "0.3", default-features = false, features = [
	"serde-well-known",
] }
serde_json = { version = "1" }
strum = { version = "0.26.3", features = ["derive"] }

# API client specifics
racal = { version = "0.4.0", optional = true }
#racal = { path = "../racal", features = ["reqwest"], optional = true }
governor = { version = "0.6.3", optional = true }
tokio = { version = "1", optional = true, features = ["macros"]}
tokio-stream = { version = "0.1", optional = true}
http = { version = "1.1.0", optional = true }
async-trait = { version = "0.1", optional = true }
# Required to be defined by us since ezsockets doesn't expose a TLS feature
tokio-tungstenite = {version = "0.23.1", optional= true, default-features = false, features = ["rustls-tls-webpki-roots"] }

[dependencies.reqwest]
optional = true
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.ezsockets]
optional = true
version = "0.6.2"
default-features = false
features = ["client", "native_client", "rustls"]

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"]}
once_cell = "1.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
